Checkmate logic fix; Visual changes; Code readability improvements

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,9 @@
+@font-face {
+  font-family: Runbitek;
+  src: url("./assets/Rubintek-DYz13.ttf");
+}
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Runbitek;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -8,12 +12,21 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    max-width: 800px;
+    margin: auto
+}
+#turn {
+    padding: 0 10px 10px 10px;
+    font-size: xx-large;
+}
+#inputs, #turn {
+    background-color: #ddd;
+    border-radius: 0 0 30px 30px;
 }
 #inputs input{
     margin: 10px;
     font-size: x-large;
     width: calc(100% - 20px);
-    max-width: 600px;
     height: 80px;
     border-radius: 20px;
     border: 2px gray solid;
@@ -21,12 +34,14 @@
 }
 canvas{
     border-radius: 5px;
+    background-color: #ddd;
 }
 #info{
     text-align: center;
     font-size: x-large;
     width: 100%;
 }
+
 #canvas-container{
     display: flex;
     justify-content: center;
